--- a/recipes/citrus-spritzer.html
+++ b/recipes/citrus-spritzer.html
@@ -7,6 +7,8 @@
 		<title>Citrus Spritzer</title>
 	</head>
 	<body>
+		<a href="index.html">Back to Recipes</a>
+
 		<h1>Citrus Spritzer</h1>
 		<img
 			src="/images//citrus-spritzer.jfif"
