--- a/recipes/grilled-turkey-legs.html
+++ b/recipes/grilled-turkey-legs.html
@@ -7,6 +7,8 @@
 		<title>Grilled Turkey Legs</title>
 	</head>
 	<body>
+		<a href="index.html">Back to Recipes</a>
+
 		<h1>Grilled Turkey Legs</h1>
 		<img
 			src="/images//grilled-turkey-legs.jfif"
