fixed file hierarchy structure

--- a/recipes/grilled-turkey-legs.html
+++ b/recipes/grilled-turkey-legs.html
@@ -7,7 +7,7 @@
 		<title>Grilled Turkey Legs</title>
 	</head>
 	<body>
-		<a href="index.html">Back to Recipes</a>
+		<a href="/index.html">Back to Recipes</a>
 
 		<h1>Grilled Turkey Legs</h1>
 		<img
