--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 		<h1>Odin Recipes</h1>
 		<ul>
 			<li>
-				<a href="recipes/citrus-spritzer.html">Sarah's Citrus Spritzer</a>
+				<a href="/recipes/citrus-spritzer.html">Sarah's Citrus Spritzer</a>
 			</li>
 			<li>
-				<a href="recipes/grilled-turkey-legs.html">Grilled Turkey Legs</a>
+				<a href="/recipes/grilled-turkey-legs.html">Grilled Turkey Legs</a>
 			</li>
 		</ul>
 	</body>
