--- a/recipes/citrus-spritzer.html
+++ b/recipes/citrus-spritzer.html
@@ -11,7 +11,7 @@
 
 		<h1>Citrus Spritzer</h1>
 		<img
-			src="/images//citrus-spritzer.jfif"
+			src="images//citrus-spritzer.jfif"
 			height="300px"
 			alt="citrus spritzer"
 		/>
