--- a/recipes/citrus-spritzer.html
+++ b/recipes/citrus-spritzer.html
@@ -7,11 +7,11 @@
 		<title>Citrus Spritzer</title>
 	</head>
 	<body>
-		<a href="/index.html">Back to Recipes</a>
+		<a href="index.html">Back to Recipes</a>
 
 		<h1>Citrus Spritzer</h1>
 		<img
-			src="images//citrus-spritzer.jfif"
+			src="/images/citrus-spritzer.png"
 			height="300px"
 			alt="citrus spritzer"
 		/>
