--- a/recipes/grilled-turkey-legs.html
+++ b/recipes/grilled-turkey-legs.html
@@ -7,13 +7,13 @@
 		<title>Grilled Turkey Legs</title>
 	</head>
 	<body>
-		<a href="/index.html">Back to Recipes</a>
+		<a href="index.html">Back to Recipes</a>
 
 		<h1>Grilled Turkey Legs</h1>
 		<img
-			src="images//grilled-turkey-legs.jfif"
+			src="images/grilled-turkey-legs.png"
 			height="300px"
-			alt="citrus spritzer"
+			alt="grilled turkey legs"
 		/>
 		<h2>Description</h2>
 		<p>Grilled Turkey Legs</p>
